--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "type": "java",
             "name": "App",
             "request": "launch",
-            "mainClass": "App",
+            "mainClass": "App.Main",
             "projectName": "final_d1b3abb4",
             "vmArgs": "--module-path /Users/lethunguyen/gui/javafx-sdk-22/lib/ --add-modules javafx.controls,javafx.fxml"
         }
